# tactile-aware-quadrupedal-loco-manipulation

./: .gitignore  README.md  index.html  style.css
code/: README.md
code/pretrained_checkpoint/: adaptation_module_latest.jit
code/real_world_depoly/deploy/: CMakeLists.txt  deploy_README.md  install_deploy.sh  setup.py
code/real_world_depoly/deploy/envs/: lcm_agent.py  lcm_agent_go2d1.py
code/real_world_depoly/deploy/go2_gym_deploy/: __init__.py
code/real_world_depoly/deploy/go2_gym_deploy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
code/real_world_depoly/deploy/scripts/: CMakeCache.txt  Makefile  cmake_install.cmake  cooperate_deploy_config.py  deploy_config.py  deploy_policy_cooperate.py
code/real_world_depoly/deploy/unitree_sdk2_bin/: lcm_position_go2.cpp  release_mcf.cpp
code/real_world_depoly/deploy/utils/: arm_controller.py  armstring.py  cheetah_state_estimator.py  deployment_runner.py  wireless_controller.py
code/simulation/: install.sh
code/simulation/low-level/: .gitignore
code/simulation/low-level/legged_gym/envs/whole_body_control/utils/: actor_critic.py
code/simulation/low-level/resources/go2d1_tactile_array/meshes/D1_meshes/: Empty_Link6.STL  finger_left.mtl  finger_right.mtl  flat_pad.mtl
code/simulation/low-level/resources/go2d1_tactile_array/urdf/: go2d1_umi_tac.urdf
code/simulation/low-level/resources/object/bottle/: wine_bottle.mtl  wine_bottle.urdf
code/simulation/low-level/tactile_utils/: play_demo.py  play_umi_tac.py  tactile_sensor.py
